--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,3 @@
-.divTable{
-    display: table;
-	width: 100%;
-}
 .divTableCell{
 	display: table-cell;
 	height: 5vh;
@@ -11,6 +7,15 @@
 }
 .divTableRow {
 	display: table-row;
+	display: flex;
+    margin-left: auto;
+	margin-right: auto;
+	justify-content: center;
+}
+.menu {
+	display: flex;
+	justify-content: center;
+	padding-bottom: 1vh;
 }
 #musicIcon{
 	height: 7vh;
@@ -18,7 +23,27 @@
 	cursor: pointer;
 	float: top;
 	clear: both;
+	flex: 1;
+	padding-left: 27vh;
 }
 .restart{
-	
+  position: relative;
+  background-color: #4CAF50;
+  border: none;
+  font-size: 4vh;
+  color: #FFFFFF;
+  width: 20vh;
+  padding-top: 1vh;
+  padding-bottom: 1vh;
+  border-radius: 2vh;
+  text-align: center;
+  -webkit-transition-duration: 0.4s;
+  transition-duration: 0.4s;
+  text-decoration: none;
+  overflow: hidden;
+  cursor: pointer;
 }
+.restart:hover{
+	background-color: #479701;
+}
+
