--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@
 	display: flex;
 	justify-content: center;
 	padding-bottom: 1vh;
+	margin-top: 2vh;
 }
 #musicIcon{
 	height: 7vh;
@@ -31,21 +32,21 @@
 	padding-left: 27vh;
 }
 .restart{
-  position: relative;
-  background-color: #00b1ff;
-  border: none;
-  font-size: 4vh;
-  color: #FFFFFF;
-  width: 20vh;
-  padding-top: 1vh;
-  padding-bottom: 1vh;
-  border-radius: 2vh;
-  text-align: center;
-  -webkit-transition-duration: 0.4s;
-  transition-duration: 0.4s;
-  text-decoration: none;
-  overflow: hidden;
-  cursor: pointer;
+	position: relative;
+	background-color: #00b1ff;
+	border: none;
+	font-size: 4vh;
+	color: #FFFFFF;
+	width: 20vh;
+	padding-top: 1vh;
+	padding-bottom: 1vh;
+	border-radius: 2vh;
+	text-align: center;
+	-webkit-transition-duration: 0.4s;
+	transition-duration: 0.4s;
+	text-decoration: none;
+	overflow: hidden;
+	cursor: pointer;
 }
 .restart:hover{
 	background-color: #0087d5;
