--- a/css/style.css
+++ b/css/style.css
@@ -95,10 +95,10 @@
 	position: fixed;
 	color: black;
 	left: 0;
-	padding-left: 5vh;
+	padding-left: 3vw;
 	font-size: 1.5vh;
 	font-family: OCR A Std, monospace;
-	width: 15vw;
+	width: 20vw;
 }
 /* Jesli width > height */
 @media screen and (orientation:portrait) {
